<resources>
    <string name="app_name">SBCapp</string>
    <string name="action_search">Search</string>
    <string name="action_setting">Setting</string>
    <string name="preview">Preview</string>
    <string name="capture">capture</string>
    <string name="mpb">Multiple Playback</string>
    <string name="spb">Single Playback</string>
    <string name="camera_setting">Setting</string>
    <string name="setting_slow_mo">Slow-Motion Function</string>
    <string name="setting_on">ON</string>
    <string name="setting_off">OFF</string>
    <string name="stream_set_timer">Set Self Timer</string>
    <string name="stream_set_timer_off">Off</string>
    <string name="stream_set_res_vid">Set Video Resolution</string>
    <string name="stream_set_res_photo">Set Photo Resolution</string>
    <string name="stream_set_error">Set Failed</string>
    <string name="stream_error_capturing">Capturing cannot switch</string>
    <string name="stream_error_recording">Recording cannot switch</string>
    <string name="stream_reconnect">Reconnect</string>
    <string name="stream_zoom_wait">Setting...</string>
    <string name="setting">Setting</string>
    <string name="setting_yes">Yes</string>
    <string name="setting_no">No</string>
    <string name="setting_power_supply">Frequency</string>
    <string name="setting_format">Format Camera</string>
    <string name="setting_format_desc">Do you want to format SD, all your data will be lost?</string>
    <string name="setting_formating">Formating...</string>
    <string name="setting_formatted">Format completed</string>
    <string name="setting_capture_delay">Capture delay</string>
    <string name="setting_image_size">Image size</string>
    <string name="setting_video_size">Video size</string>
    <string name="title_burst">Continuous Shooting</string>
    <string name="setting_burst_interval">Continuous Shooting Interval</string>
    <string name="setting_cap_timescape_interval">Timelapse Interval</string>
    <string name="setting_cap_timescape_duration">Timelapse Duration</string>
    <string name="setting_vid_timescape_interval">Video Timelapse Interval</string>
    <string name="setting_vid_timescape_duration">Video Timelapse Duration</string>
    <string name="setting_datestamp">Date Stamp</string>
    <string name="setting_about">About</string>
    <string name="setting_app_version">App Version</string>
    <string name="setting_product_name">Product Name</string>
    <string name="setting_firmware_version">FW Version</string>
    <string name="title_awb">White Balance</string>
    <string name="dialog_no_sd">No SD card, please insert one and retry</string>
    <string name="setting_no_sd">No SD card to format</string>
    <string name="dialog_failed">Operation failed, please retry.</string>
    <string name="dialog_deleting">Deleting...</string>
    <string name="dialog_delete_failed_single">Error while deleting</string>
    <string name="dialog_deleting_failed_multi">Error while deleting, $1$ items not deleted,please check whether the files are locked or not</string>
    <string name="dialog_downloading">Downloading $1$/$2$...</string>
    <string name="dialog_downloaded">"$2$ pictures downloaded to 
$3$"</string>
    <string name="dialog_downloaded_2">"$2$ items downloaded to 
$3$"</string>
    <string name="dialog_downloaded_skipped">"$2$ pictures downloaded.
(Skipped $1$ videos and $4$ downloaded pictures)"</string>
    <string name="dialog_downloaded_skipped_2">"$2$ items downloaded.
(Skipped $1$ downloaded items)"</string>
    <string name="dialog_downloaded_single">"Picture has been downloaded to
$1$"</string>
    <string name="dialog_downloading_single">Downloading...</string>
    <string name="dialog_cancel_downloading_succeeded">"Succeeded to cancel downloading"</string>
    <string name="dialog_cancel_downloading_failed">"Failed to cancel downloading""</string>
    <string name="dialog_wifi_lost">Cannot connect to Wi-Fi, please retry.</string>
    <string name="dialog_btn_reconnect">Reconnect</string>
    <string name="dialog_btn_continue">Continue</string>
    <string name="dialog_btn_exit">Exit</string>
    <string name="dialog_not_enough_space">Handset does not have enough storage, please delete some files and restart.</string>
    <string name="dialog_recording_card_full">Warning: SD card full, video recording stopped.</string>
    <string name="dialog_sd_card_is_full">Warning: SD card full, cannot record or take pictures.</string>
    <string name="dialog_card_error">SD card error!</string>
    <string name="dialog_card_not_exist">SD card is not inserted, cannot perform capture/recording.</string>
    <string name="dialog_card_inserted">SD card inserted</string>
    <string name="dialog_card_removed">SD card is removed</string>
    <string name="dialog_card_full">SD card is full</string>
    <string name="dialog_card_lose">SD card does not exist</string>
    <string name="dialog_timeout">Connection to camera failed, please ensure Wi-Fi connection is working.</string>
    <string name="ok">OK</string>
    <string name="gallery_view_video_not_supported">Your camera device does not support video playback.</string>
    <string name="gallery_download_video_not_supported">Your This device does not support video downloading</string>
    <string name="gallery_no_image">No files to download</string>
    <string name="gallery_selection_count">$1$/$2$ Selected</string>
    <string name="gallery_delete_des">Confirm deleting $1$ files?</string>
    <string name="gallery_download_msg">Confirm download $1$ files?</string>
    <string name="gallery_download_with_vid_msg">"Total Files: $1$ Download Time: $2$ mins and $3$ seconds Confirm download?"</string>
    <string name="gallery_download_pic_msg">Confirm download $1$ pictures?</string>
    <string name="gallery_download_msg_2">"Confirm download $1$ files? ($2$ skipped videos)"</string>
    <string name="gallery_download">Download</string>
    <string name="gallery_delete">Delete</string>
    <string name="gallery_cancel">Cancel</string>
    <string name="gallery_no_file_selected">No file selected</string>
    <string name="gallery_share_wifi">Please select Wi-Fi</string>
    <string name="gallery_share_to">Share to...</string>
    <string name="gallery_cannot_view_video">Video viewing not supported</string>
    <string name="gallery_cannot_download_video">Cannot download video</string>
    <string name="image_delete_des">Confirm delete this picture?</string>
    <string name="image_download_msg">Confirm download?</string>
    <string name="video_delete_des">Confirm delete this video?</string>
    <string name="no_pics">No picture to view</string>
    <string name="low_battery">Low battery, please recharge the device.</string>
    <string name="unsupported_mode">The device does not support this mode of operation</string>
    <string name="downloading_quit">All task of downloading will be cancelled,are you sure?</string>
    <string name="pb_video">Video playback</string>
    <string name="check_wifi_policy">Please keep to always connecting Wi-Fi</string>
    <string name="title_activity_decode">DecodeActivity</string>
    <string name="camera_awake_success">Succeed to awake camera</string>
    <string name="camera_awake_failed">Failed to awake camera</string>
    <string name="dialog_delete_all">All delete</string>
    <string name="dialog_awake_all">All awake</string>
    <string name="camera_awake">Awake camera</string>
    <string name="camera_sleep">Sleep camera</string>
    <string name="camera_sleep_alert">Connect to camera will lose if sleep camera,comfirm to do?</string>
    <string name="wb_auto">AUTO</string>
    <string name="wb_daylight">Daylight</string>
    <string name="wb_cloudy">Cloudy</string>
    <string name="wb_fluorescent">Fluorescent</string>
    <string name="wb_incandescent">Incandescent</string>
    <string name="wb_underwater">Underwater</string>
    <string name="burst_off">OFF</string>
    <string name="burst_3">3 photos</string>
    <string name="burst_5">5 photos</string>
    <string name="burst_10">10 photos</string>
    <string name="burst_7">7 photos</string>
    <string name="burst_15">15 photos</string>
    <string name="burst_30">30 photos</string>
    <string name="burst_hs">Continuous</string>
    <string name="dateStamp_off">OFF</string>
    <string name="dateStamp_date">Date</string>
    <string name="dateStamp_date_and_time">Date and time</string>
    <string name="frequency_50HZ">50HZ</string>
    <string name="frequency_60HZ">60HZ</string>
    <string name="download_manager">Download Manager</string>
    <string name="download_progress">Has done: $1$    Wait: $2$    Failed: $3$</string>
    <string name="setting_preview_cache_duration">Preview cache duration</string>
    <string name="setting_time_lapse_interval">Time lapse interval</string>
    <string name="setting_time_lapse_interval_off">OFF</string>
    <string name="setting_time_lapse_interval_2s">2 Sec</string>
    <string name="setting_time_lapse_interval_5s">5 Sec</string>
    <string name="setting_time_lapse_interval_10s">10 Sec</string>
    <string name="setting_time_lapse_interval_20s">20 Sec</string>
    <string name="setting_time_lapse_interval_30s">30 Sec</string>
    <string name="setting_time_lapse_interval_1M">1 Min</string>
    <string name="setting_time_lapse_interval_5M">5 Min</string>
    <string name="setting_time_lapse_interval_10M">10 Min</string>
    <string name="setting_time_lapse_interval_30M">30 Min</string>
    <string name="setting_time_lapse_interval_1HR">60 Min</string>
    <string name="setting_time_lapse_duration">Time lapse duration</string>
    <string name="setting_time_lapse_duration_2M">2 Min</string>
    <string name="setting_time_lapse_duration_5M">5 Min</string>
    <string name="setting_time_lapse_duration_10M">10 Min</string>
    <string name="setting_time_lapse_duration_15M">15 Min</string>
    <string name="setting_time_lapse_duration_20M">20 Min</string>
    <string name="setting_time_lapse_duration_30M">30 Min</string>
    <string name="setting_time_lapse_duration_60M">60 Min</string>
    <string name="setting_time_lapse_duration_unlimit">Unlimited</string>
    <string name="capture_start">Start capturing...</string>
    <string name="no_files_found">No files found!</string>
    <string name="title_local_media">Media on My Phone</string>
    <string name="title_video">Video</string>
    <string name="title_photo">Photo</string>
    <string name="title_activity_add_new_cam">Add New Camera</string>
    <string name="title_fragment_btpair_begin">Pairing</string>
    <string name="title_fragment_btpair_wifisetup">Wi-Fi setup</string>
    <string name="title_fragment_btpair_completed">Completed</string>
    <string name="text_btpair">Bluetooth Pair</string>
    <string name="text_ready_pair">Make sure your camera is ready for pairing and type the right PIN.</string>
    <string name="text_btpair_search_camera">Search</string>
    <string name="text_btpair_search_ble">Search BLE</string>
    <string name="text_btpair_setup">Setup</string>
    <string name="text_btpair_skip">SKIP</string>
    <string name="text_btpair_done">Done</string>
    <string name="text_btpair_already_connect_cam">When you already connect to camera by Wi-Fi.</string>
    <string name="text_btpair_connect_wifi">Wi-Fi Connect</string>
    <string name="text_btpair_connect_cam">Connect to Your Camera</string>
    <string name="text_btpair_support_bt">For new camera, and the camera support Bluetooth.</string>
    <string name="text_btpair_connect_operationsteps">Please click on the Done button to enter preview</string>
    <string name="text_btpair_setup_camwifi">Pair camera success, you can setup camera Wi-Fi or just click Setup to keep default setting.</string>
    <string name="action_set_ip">Input IP</string>
    <string name="text_license">License</string>
    <string name="help">Help</string>
</resources>